restructed create role

--- a/ansible/roles/jenkins/tasks/aws_cli.yaml
+++ b/ansible/roles/jenkins/tasks/aws_cli.yaml
@@ -1,6 +1,6 @@
 - name: Playbook to install AWS CLI
-  hosts: localhost
-  become: true
+  # hosts: localhost
+  # become: true
   tasks:
     - block:
       - name: Install unzip
