Modified tasks structure

--- a/ansible/roles/jenkins/tasks/aws_cli.yaml
+++ b/ansible/roles/jenkins/tasks/aws_cli.yaml
@@ -1,44 +1,39 @@
-- name: Playbook to install AWS CLI
-  # hosts: localhost
-  # become: true
-  tasks:
-    - block:
-      - name: Install unzip
-        apt:
-          name: unzip
-          state: present
-          update_cache: yes
+- name: Install unzip
+  apt:
+    name: unzip
+    state: present
+    update_cache: yes
 
-      - name: Download AWS CLI
-        get_url:
-          url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
-          dest: "~/awscliv2.zip"
-          mode: '0644'
+- name: Download AWS CLI
+  get_url:
+    url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
+    dest: "~/awscliv2.zip"
+    mode: '0644'
 
-      - name: Unzip and Install AWS cli package
-        shell: |
-          unzip ~/awscliv2.zip
-          ./aws/install
+- name: Unzip and Install AWS cli package
+  shell: |
+    unzip ~/awscliv2.zip
+    ./aws/install
 
-      when: ansible_distribution == "Ubuntu"
-      
-    - block:
-      - name: Install unzip
-        yum:
-          name: unzip
-          state: present
-          update_cache: yes
+# when: ansible_distribution == "Ubuntu"
 
-      - name: Download AWS CLI
-        get_url:
-          url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
-          dest: "awscliv2.zip"
-          mode: '0644'
+# - block:
+# - name: Install unzip
+#   yum:
+#     name: unzip
+#     state: present
+#     update_cache: yes
 
-      - name: Unzip and Install AWS cli package
-        command:
-          unzip awscliv2.zip
-          ./aws/install
+# - name: Download AWS CLI
+#   get_url:
+#     url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
+#     dest: "awscliv2.zip"
+#     mode: '0644'
 
-      when: ansible_distribution == "Redhat"
-      
+# - name: Unzip and Install AWS cli package
+#   command:
+#     unzip awscliv2.zip
+#     ./aws/install
+
+# when: ansible_distribution == "Redhat"
+
