Modified for redhat and ubuntu

--- a/ansible/roles/jenkins/tasks/aws_cli.yaml
+++ b/ansible/roles/jenkins/tasks/aws_cli.yaml
@@ -3,6 +3,14 @@
     name: unzip
     state: present
     update_cache: yes
+  when: ansible_distribution == "Ubuntu"
+
+- name: Install unzip
+  yum:
+    name: unzip
+    state: present
+    update_cache: yes
+  when: ansible_distribution == "Redhat"
 
 - name: Download AWS CLI
   get_url:
@@ -13,27 +21,5 @@
 - name: Unzip and Install AWS cli package
   shell: |
     unzip ~/awscliv2.zip
-    ./aws/install
-
-# when: ansible_distribution == "Ubuntu"
-
-# - block:
-# - name: Install unzip
-#   yum:
-#     name: unzip
-#     state: present
-#     update_cache: yes
-
-# - name: Download AWS CLI
-#   get_url:
-#     url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
-#     dest: "awscliv2.zip"
-#     mode: '0644'
-
-# - name: Unzip and Install AWS cli package
-#   command:
-#     unzip awscliv2.zip
-#     ./aws/install
-
-# when: ansible_distribution == "Redhat"
+    ./aws/install --update
 
