--- a/ansible/roles/jenkins/tasks/efs_utils.yaml
+++ b/ansible/roles/jenkins/tasks/efs_utils.yaml
@@ -9,63 +9,13 @@
     line: 'source "$HOME/.cargo/env"'
     create: yes
 
-- name: Install binaries
-  apt:
-    name:
-      - git 
-      - binutils 
-      - rustc
-      - cargo
-      - pkg-config
-      - libssl-dev
-      - gettext 
-    state: present
-    update_cache: true
+- name: Install efs-utils for debian 
+  include_tasks: efs_utils_debian.yaml
   when: ansible_distribution == "Ubuntu"
 
-
-- name: Install binaries
-  yum:
-    name:
-      - git 
-      - binutils 
-      - rustc
-      - cargo
-      - pkg-config
-      - libssl-dev
-      - gettext 
-    state: present
-    update_cache: true
+- name: Install efs-utils for debian 
+  include_tasks: efs_utils_rpm.yaml
   when: ansible_distribution == "RedHat"
-
-- name: Clone git repo
-  ansible.builtin.git:
-    repo: "https://github.com/aws/efs-utils"
-    dest: "/tmp/efs-utils"
-    update: yes
-
-- name: Change the working directory to and efs-utils execute ./build-deb.sh 
-  command: 
-    cmd: "./build-deb.sh" 
-    chdir: "/tmp/efs-utils"
-
-- name: Find the built Amazon EFS Utils .deb package
-  ansible.builtin.find:
-    paths: "/tmp/efs-utils/build/"
-    patterns: "amazon-efs-utils*deb"
-  register: deb_files
-
-- name: Install EFS Utils package
-  ansible.builtin.apt:
-    deb: "{{ deb_files.files[0].path }}"
-  when: deb_files.files | length > 0
-
-- name: Install efs-utils and dependencies
-  apt:
-    name: 
-      - build-essential
-      - libwrap0-dev
-      - libssl-dev
 
 - name: Download stunnel package
   get_url:
