--- a/ansible/roles/jenkins/tasks/main.yaml
+++ b/ansible/roles/jenkins/tasks/main.yaml
@@ -2,15 +2,15 @@
   include_tasks: efs_utils.yaml
   
 - name: AWS CLI SETUP
-  import_tasks: aws_cli.yaml
+  include_tasks: aws_cli.yaml
 
 - name: EFS FILESYSTEM SETUP
-  import_tasks: efs_config.yaml
+  include_tasks: efs_config.yaml
 
 - name: JENKINS SETUP FOR UBUNTU
-  import_tasks: jenkins_debian.yaml
+  include_tasks: jenkins_debian.yaml
   when: ansible_distribution == "Ubuntu"
 
 - name: JENKINS SETUP FOR REDHAT
-  import_tasks: jenkins_redhat.yaml
-  when: ansible_distribution == "Redhat"
+  include_tasks: jenkins_redhat.yaml
+  when: ansible_distribution == "RedHat"
