--- a/ansible/roles/jenkins/tasks/efs_utils.yaml
+++ b/ansible/roles/jenkins/tasks/efs_utils.yaml
@@ -15,7 +15,7 @@
 
 - name: Install efs-utils for debian 
   include_tasks: efs_utils_rpm.yaml
-  when: ansible_distribution == "RedHat"
+  when: ansible_fact['os_family'] == "RedHat"
 
 - name: Download stunnel package
   get_url:
