--- a/ansible/roles/jenkins/tasks/efs_utils.yaml
+++ b/ansible/roles/jenkins/tasks/efs_utils.yaml
@@ -13,9 +13,9 @@
   include_tasks: efs_utils_debian.yaml
   when: ansible_distribution == "Ubuntu"
 
-- name: Install efs-utils for debian 
+- name: Install efs-utils for Redhat 
   include_tasks: efs_utils_rpm.yaml
-  when: ansible_fact['os_family'] == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Download stunnel package
   get_url:
