--- a/ansible/roles/jenkins/tasks/main.yaml
+++ b/ansible/roles/jenkins/tasks/main.yaml
@@ -13,4 +13,4 @@
 
 - name: JENKINS SETUP FOR REDHAT
   include_tasks: jenkins_redhat.yaml
-  when: ansible_fact['os_family'] == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
