--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,5 +31,13 @@ pipeline {
                 }
             }
         }
+
+        stage('wait for QG'){
+            steps{
+                timeout(5) {
+                    waitForQualityGate abortPipeline: false, credentialsId: 'Sonarqube-Token'
+                }
+            }
+        }
     }
 }
