--- a/docker/sonar-compose.yml
+++ b/docker/sonar-compose.yml
@@ -12,6 +12,8 @@ services:
   
   sonarqube: 
     image: sonar25
+    ports: 
+      - 9000:9000
     environment:
       - SONAR_JDBC_URL=jdbc:postgresql://sonarqube-db:5432/sonarqube   
       - SONAR_JDBC_USERNAME=sonar   
