--- a/docker/sonar-compose.yml
+++ b/docker/sonar-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgress:latest
+    image: postgres:latest
     environment:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
@@ -15,7 +15,7 @@ services:
     ports: 
       - 9000:9000
     environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://sonarqube-db:5432/sonarqube   
+      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube   
       - SONAR_JDBC_USERNAME=sonar   
       - SONAR_JDBC_PASSWORD=sonar
     networks:
@@ -26,7 +26,7 @@ services:
       - sonarqube_logs:/opt/sonarqube/logs
 
 networks:
-  sonarnet 
+  sonarnet:
 
 volumes:
   sonardata
