--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                         $scanner/bin/sonar-scanner \
                         -Dsonar.projectName=test \
                         -Dsonar.java.binaries=target/classes
-                        -Dsonar.java.libraries=target/dependency/"$jars"
+                        -Dsonar.java.libraries="$jars"
                         '''
                 }
             }
